--- a/application/package.json
+++ b/application/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_CONFIG_DIR=./integration-test/config NODE_ENV=test ./node_modules/mocha/bin/_mocha --require @babel/register -b ./integration-test/ --reporter mochawesome --timeout 1000000",
-    "setupAll": "./install.sh",
+    "setup": "./build-dependencies.shinstall.sh",
     "fix": "npm run format && npm run lint -- --fix",
     "format": "prettier --write \"**/*.{json,css,scss,md,html}\"",
     "lint": "eslint .",
