--- a/application/zkp/package.json
+++ b/application/zkp/package.json
@@ -5,8 +5,7 @@
   "repository": "https://github.com/EYBlockchain/nightfall",
   "main": "index.js",
   "scripts": {
-    "setup": "NODE_ENV=setup npx babel-node code/index.js",
-    "setup-all": "yes | NODE_ENV=setup npx babel-node code/index.js",
+    "setup": "NODE_ENV=setup npx babel-node code/index.js setup --build-dir=build",
     "start": "nodemon --ignore /src/vkIds.json --ignore config/* --ignore build-test --exec babel-node ./src/index.js",
     "test": "jest ./__tests__/*.test.js"
   },
@@ -18,24 +17,24 @@
     "Liju Jose <Liju.Jose@gds.ey.com>",
     "Asish A Prema <Asish.Prema@gds.ey.com>",
     "A.J. May <aj.may@ey.com>",
-    "Kartheek Solipuram <Kartheek.Solipuram@ey.com>"
+    "Kartheek Solipuram <Kartheek.Solipuram@ey.com>",
+    "William Entriken <github.com@phor.net>"
   ],
   "license": "CC0-1.0",
   "dependencies": {
-    "beepbeep": "1.2.2",
     "bignumber.js": "^8.0.2",
     "body-parser": "^1.19.0",
     "ethereumjs-abi": "^0.6.6",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "hex-to-binary": "^1.0.1",
-    "inquirer": "^6.2.2",
     "jsonfile": "^4.0.0",
     "left-pad": "^1.3.0",
     "node-docker-api": "^1.1.22",
     "truffle-contract": "4.0.15",
     "web3": "1.0.0-beta.36",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "glob": "7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
